--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,14 @@ logs/
 
 # Cache
 .cache/
+
+# Docker
+.docker/
+docker-compose.override.yml
+*.env
+.env.*
+.dockerignore
+docker-compose.*.yml
+docker-compose.override.yml
+docker-compose.override.yaml
+docker-compose.yml.local
