--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,3 +8,11 @@ h11==0.14.0
 sniffio==1.3.1
 idna==3.6
 click==8.1.8
+
+# AI/ML dependencies
+torch==2.0.0
+torchaudio==2.0.0
+transformers==4.30.0
+sentence-transformers==2.2.2
+scipy==1.10.1
+jellyfish==0.9.0
