create interface for voice search

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,23 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+# Install all system dependencies at once
+RUN apt-get update && apt-get install -y \
+    flac \
+    libportaudio2 \
+    libsndfile1 \
+    ffmpeg \
+    portaudio19-dev \
+    python3-pyaudio \
+    gcc \
+    libasound2-dev \
+    python3-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 # Copy requirements first for better caching
 COPY requirements.txt .
+
+# Install all Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application
