--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,8 @@
-fastapi==0.115.6
-uvicorn==0.34.0
-pydantic==2.10.4
-starlette==0.41.3
-typing_extensions==4.12.2
-anyio==4.7.0
-h11==0.14.0
-sniffio==1.3.1
-idna==3.6
-click==8.1.8
-
-# AI/ML dependencies
-torch==2.0.0
-torchaudio==2.0.0
-transformers==4.30.0
-sentence-transformers==2.2.2
-scipy==1.10.1
-jellyfish==0.9.0
+fastapi==0.68.0
+uvicorn==0.15.0
+python-multipart==0.0.6
+SpeechRecognition==3.10.0
+pydantic==1.8.2
+numpy>=1.20.0
+soundfile>=0.10.3
+PyAudio>=0.2.11
