--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:16-alpine
 WORKDIR /app
 
 # Copy package files
-COPY package*.json ./
+COPY package*.json .
 RUN npm install --legacy-peer-deps
 
 # Copy the rest of the application
