Add legacy Gurmukhi transliteration support

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,33 +1,41 @@
 # Web Framework
-fastapi==0.68.0
-uvicorn==0.15.0
-python-multipart==0.0.6
-starlette==0.14.2
+fastapi>=0.68.0
+uvicorn>=0.15.0
+python-multipart>=0.0.6
+starlette>=0.14.2
 
 # Machine Learning & Data Science
-torch==2.0.0
-torchaudio==2.0.0
-transformers==4.30.2
-sentence-transformers==2.2.2
-huggingface-hub==0.16.4
-scikit-learn==1.3.2
-safetensors==0.3.1
+torch>=2.2.0
+torchaudio>=2.2.0
+transformers>=4.30.2
+sentence-transformers>=2.2.2
+huggingface-hub>=0.16.4
+scikit-learn>=1.3.2
+safetensors>=0.3.1
 
 # Scientific Computing
-scipy==1.10.1
-numpy==1.24.4
-networkx==2.8.8
+scipy>=1.11.3
+numpy>=1.24.4
+networkx>=2.8.8
 
 # Text Processing
-jellyfish==1.0.0
+jellyfish>=1.0.0
 
 # Audio Processing
-SpeechRecognition==3.10.0
-PyAudio==0.2.11
-sounddevice==0.5.1
-soundfile==0.12.1
+SpeechRecognition>=3.10.0
+sounddevice>=0.5.1
+soundfile>=0.12.1
 
 # Utilities
-pydantic==1.10.12
-requests==2.31.0
-tqdm==4.65.0
+pydantic>=1.10.12
+requests>=2.31.0
+tqdm>=4.65.0
+
+# Librosa
+librosa>=0.10.1
+
+# pydub
+pydub>=0.25.1
+
+# ffmpeg-python
+ffmpeg-python>=0.2.0
