--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,26 @@
-# version: '3.8'
-
+version: '3.8'
 services:
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./backend:/app
-    environment:
-      - PYTHONPATH=/app
-
   frontend:
-    build:
+    build: 
       context: ./frontend
-      dockerfile: Dockerfile
+      target: development
     ports:
       - "3000:3000"
     volumes:
       - ./frontend:/app
       - /app/node_modules
-    depends_on:
-      - backend 
+    environment:
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
+    stdin_open: true
+    command: npm start
+
+  backend:
+    build: 
+      context: ./backend
+      target: development
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./backend:/app
+    command: uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload 
