--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,26 @@ docker-compose.*.yml
 docker-compose.override.yml
 docker-compose.override.yaml
 docker-compose.yml.local
+node_modules
+
+# Node dependencies and build files
+node_modules/
+/build/
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production build
+/dist/
+
+# Misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
