--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,29 +1,32 @@
-FROM python:3.9-slim
-
+# Development stage
+FROM python:3.12-slim as development
 WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    flac \
-    libportaudio2 \
-    libsndfile1 \
-    ffmpeg \
-    portaudio19-dev \
-    python3-pyaudio \
-    gcc \
-    libasound2-dev \
-    python3-dev \
+    libgomp1 \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for better caching
+# Install Python packages
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application
 COPY . .
+ENV PYTHONUNBUFFERED=1
+CMD ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
-# Expose the port
-EXPOSE 8000
+# Production stage (if needed)
+FROM python:3.12-slim as production
+WORKDIR /app
 
-# Run the application
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    libgomp1 \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+COPY . .
 CMD ["uvicorn", "src.api.main:app", "--host", "0.0.0.0", "--port", "8000"] 
