--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.0.0",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.55",
-    "@types/react": "^17.0.83",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "axios": "^1.7.9",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "antd": "^5.11.0",
+    "@ant-design/icons": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,6 +44,10 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^19.0.2"
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-react": "^7.0.0",
+    "eslint-plugin-react-hooks": "^4.0.0"
   }
 }
