--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "anvaad-js": "^1.4.2",
+    "@ant-design/icons": "^5.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
@@ -10,19 +12,21 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "axios": "^1.7.9",
+    "antd": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^1.1.2",
-    "antd": "^5.11.0",
-    "@ant-design/icons": "^5.0.0"
+    "unorm": "^1.6.0",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:ci": "react-scripts test --watchAll=false",
+    "test:coverage": "react-scripts test --coverage --watchAll=false",
+    "test:watch": "react-scripts test --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,10 +48,17 @@
     ]
   },
   "devDependencies": {
+    "@types/unorm": "^1.3.31",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.0.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/utils/transliteration/**/*.{ts,tsx}",
+      "!src/**/*.d.ts"
+    ]
   }
 }
