--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.6"
+    "@types/react": "^19.0.6",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
-    "antd": "^5.23.1"
+    "antd": "^5.23.1",
+    "anvaad-js": "^1.5.0"
   }
 }
